# BitSet-in-C

./: CMakeLists.txt  README.md
examples/: example.c
include/: BitSet.h
src/: BitSet.c
